--- a/src/main/webapp/css/welcome.css
+++ b/src/main/webapp/css/welcome.css
@@ -6,29 +6,22 @@
 */
 @charset "UTF-8";
 
-/* HEAD部分（中央揃え／背景色） */
-.head {
-	text-align: center;
-	font-family: serif;
-	background-color: maroon;
-}
+/* HEAD部分をここでは指定しない */
 
 /* TITLE部分（中央揃え） */
 .title {
 	text-align: center;
 	font-family: serif;
-	background-color: maroon;
 }
 
 /* BODY部分（中央揃え／書体／背景画像／画像サイズ指定） */
 .body {
 	text-align: center;
 	font-family: serif;
-	background: url(../image/yo-sho-ku001.jpg);
+	background: url(../image/yo-sho-ku007.jpg);
 	background-size: cover;
 	max-width: 100%;
 	height: auto;
-	background-color: maroon;
 }
 
 /* 見出し（各レベルごと）部分（中央揃え／文字サイズの指定） */
@@ -43,14 +36,6 @@
 
 .h3 {
 	font-size: 22px;
-}
-
-/* 
-* プルダウンメニューの文字を変える。効いてなさそう。
-*/
-.select {
-	font-size: 24px;
-	font-family: serif;
 }
 
 /* 各入力フォーム（余白での中央揃え／フォントの指定） */
